log
Sat 30 Mar 2024 05:04:30 PM UTC: 
 tests:  0|6
total_score: 0/70
a57f58a
Sat 30 Mar 2024 05:06:47 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:10: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   36 |   return list;
      |          ^~~~
      |          List
list.c:36:10: note: each undeclared identifier is reported only once for each function it appears in
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
   37 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
de33ec4
Sat 30 Mar 2024 05:06:53 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
14c0f93
Sat 30 Mar 2024 05:08:19 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
e1f3fdb
Sat 30 Mar 2024 05:08:45 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
test.c: In function ‘firstList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:84:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
   84 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:75:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   75 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:62:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   62 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fd558dd
Sat 30 Mar 2024 05:08:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bdbc453
Sat 30 Mar 2024 05:09:04 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
02a8519
Sat 30 Mar 2024 05:10:08 PM UTC: 
 list.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  2|5
total_score: 15/70
39d1e87
Sat 30 Mar 2024 05:11:02 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
4d3c767
Sat 30 Mar 2024 05:13:22 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  5|4
total_score: 25/70
fcc42fb
Sat 30 Mar 2024 05:13:57 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
ac6cee6
Sat 30 Mar 2024 05:14:10 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
972a361
